--- a/Labs/Lab1/Lab1_Assignment.ipynb
+++ b/Labs/Lab1/Lab1_Assignment.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -157,7 +157,7 @@
        "ABC   2018-02-01   $97.74   $99.29   2786798"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,9 @@
     "\n",
     "df = df.set_index(\"Name\") # setting the index to be \"Name\"\n",
     "# print(df) # whole data frame\n",
-    "df.head() # updated first 5 rows of index being name"
+    "df.head() # updated first 5 rows of index being name\n",
+    "\n",
+    "# this is code"
    ]
   },
   {
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -240,7 +242,7 @@
        "<Axes: xlabel='volume'>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -293,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -306,7 +308,7 @@
        "<Axes: xlabel='volume'>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -368,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -410,6 +412,7 @@
     "percentage_1 = (df_close['1'] / df_close.sum()) * 100 \n",
     "\n",
     "print(f\"Percentage of times '1' is the first digit: {percentage_1:.2f}%\")\n",
+    "\n",
     "\n",
     "\n",
     "\n",
