--- a/Labs/Lab2/2A_Shark_Tank.ipynb
+++ b/Labs/Lab2/2A_Shark_Tank.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 2,
       "metadata": {
         "id": "Us6oobKlovvp"
       },
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 3,
       "metadata": {
         "id": "arHQniiLovvy"
       },
@@ -227,7 +227,7 @@
               "4   NaN      NaN         NaN    NaN             NaN  "
             ]
           },
-          "execution_count": 58,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -249,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 4,
       "metadata": {
         "id": "w6KKp8u1ovv7"
       },
@@ -576,7 +576,7 @@
               "[495 rows x 17 columns]"
             ]
           },
-          "execution_count": 59,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -599,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 5,
       "metadata": {
         "id": "HQjnkHrZovwA"
       },
@@ -926,7 +926,7 @@
               "[495 rows x 17 columns]"
             ]
           },
-          "execution_count": 60,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -963,7 +963,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 6,
       "metadata": {
         "id": "9_mHDH2novwF"
       },
@@ -1047,7 +1047,7 @@
               "150  exclusive rights to sell internationally  "
             ]
           },
-          "execution_count": 61,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1061,7 +1061,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -1386,7 +1386,7 @@
               "[248 rows x 17 columns]"
             ]
           },
-          "execution_count": 62,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1400,7 +1400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -1482,7 +1482,7 @@
               "206  with an option for another $2.5 Million for an...  "
             ]
           },
-          "execution_count": 63,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1500,6 +1500,104 @@
       },
       "source": [
         "Zips was the most valuable company."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Season</th>\n",
+              "      <th>No. in series</th>\n",
+              "      <th>Company</th>\n",
+              "      <th>Deal</th>\n",
+              "      <th>Industry</th>\n",
+              "      <th>Entrepreneur Gender</th>\n",
+              "      <th>Amount</th>\n",
+              "      <th>Equity</th>\n",
+              "      <th>Corcoran</th>\n",
+              "      <th>Cuban</th>\n",
+              "      <th>Greiner</th>\n",
+              "      <th>Herjavec</th>\n",
+              "      <th>John</th>\n",
+              "      <th>O'Leary</th>\n",
+              "      <th>Harrington</th>\n",
+              "      <th>Guest</th>\n",
+              "      <th>Details / Notes</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>483</th>\n",
+              "      <td>6.0</td>\n",
+              "      <td>27.0</td>\n",
+              "      <td>AirCar</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Green/CleanTech</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>5000000.0</td>\n",
+              "      <td>50.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>Contingent on getting deal to bring to contine...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     Season  No. in series Company Deal         Industry Entrepreneur Gender  \\\n",
+              "483     6.0           27.0  AirCar  Yes  Green/CleanTech                Male   \n",
+              "\n",
+              "        Amount  Equity  Corcoran  Cuban  Greiner  Herjavec  John  O'Leary  \\\n",
+              "483  5000000.0    50.0       0.0    0.0      0.0       1.0   0.0      0.0   \n",
+              "\n",
+              "     Harrington  Guest                                    Details / Notes  \n",
+              "483         0.0    0.0  Contingent on getting deal to bring to contine...  "
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.loc[[df[\"Amount\"].idxmax()]]"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Air car was the company most invested in by the sharks, but they werent the most valuable."
       ]
     },
     {
@@ -1524,7 +1622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 10,
       "metadata": {
         "id": "1UZfCn-2ovwO"
       },
@@ -1535,7 +1633,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 64,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1598,7 +1696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 11,
       "metadata": {
         "id": "HoeI9g5NovwT"
       },
@@ -1609,7 +1707,7 @@
               "<Axes: xlabel='Industry'>"
             ]
           },
-          "execution_count": 65,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         },
